// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Link> renders correctly 1`] = `
<path
  className="Link"
  d="M1,2C3,2 3,9 5,9"
/>
`;

exports[`<Link> renders correctly with custom path 1`] = `
<path
  className="Link"
  d="M1,2 5,9"
/>
`;
